--- a/packages/2.x/index.html
+++ b/packages/2.x/index.html
@@ -343,6 +343,7 @@ permalink: /packages/2.x/
 <dt>2.12.4. <a href="/packages/2.x/Sql.html#2-12-4">Connection Locator</a></dt>
 <dd><dl>
 <dt>2.12.4.1. <a href="/packages/2.x/Sql.html#2-12-4-1">Construction-Time Configuration</a></dt>
+<dt>2.12.4.2. <a href="/packages/2.x/Sql.html#2-12-4-2">Profiler</a></dt>
 </dl></dd>
 </dl></dd>
 <dt>2.13. <a href="/packages/2.x/SqlQuery.html#2-13">Aura.SqlQuery</a></dt>
