--- a/packages/3.x/Di/index.html
+++ b/packages/3.x/Di/index.html
@@ -54,6 +54,9 @@ permalink: /packages/3.x/Di/
 <dt>1.1.6.7. <a href="/packages/3.x/Di/lazy.html#1-1-6-7">Generic Lazy Calls</a></dt>
 </dl></dd>
 <dt>1.1.7. <a href="/packages/3.x/Di/factories.html#1-1-7">Instance Factories</a></dt>
+<dd><dl>
+<dt>1.1.7.1. <a href="/packages/3.x/Di/factories.html#1-1-7-1">Broader Instantiation</a></dt>
+</dl></dd>
 <dt>1.1.8. <a href="/packages/3.x/Di/config.html#1-1-8">Container Builder and Config Classes</a></dt>
 <dt>1.1.9. <a href="/packages/3.x/Di/auto.html#1-1-9">Auto-Resolution Of Constructor Parameters</a></dt>
 <dd><dl>
