--- a/packages/3.x/Di/auto.html
+++ b/packages/3.x/Di/auto.html
@@ -20,7 +20,7 @@ permalink: /packages/3.x/Di/auto.html
 </nav>
 <div id="section-main"><h1 id="1-1-9">1.1.9. Auto-Resolution Of Constructor Parameters</h1>
 <p>Some developers prefer to let the <em>Container</em> resolve dependencies on its own, without having to specify anything in a configuration file. Note that there can be unusual debugging problems inherent in tracking down the default injections, so auto-resolution may or may not be your preference.</p>
-<p>To use auto-resolution in a <em>Container</em>, build the <em>Container</em> with <code>$container = $builder-&gt;newInstance($builder::AUTO_RESOLVE)</code>.</p>
+<p>To use auto-resolution in a <em>Container</em>, build the <em>Container</em> with <code>$container = $builder-&gt;newInstance($builder::AUTO_RESOLVE)</code>. If you're using <code>newConfiguredInstance</code> to configure your dependency injector and want this functionality, you will need to pass <code>$builder::AUTO_RESOLVE</code> as the second parameter.</p>
 <p>Note that auto-resolution only works for class/interface typehints. It does not work for <code>array</code> typehints.</p>
 <p>Note also that auto-resolution does not apply to setter methods. This is because the <em>Container</em> does not know which methods are setters and which are "normal use" methods. Since you have to specify <code>$di-&gt;setters</code> anyway, the <em>Container</em> has no chance to attempt auto-resolution.</p>
 <h2 id="1-1-9-1">1.1.9.1. Auto-Resolving From Concrete Typehints</h2>
