--- a/packages/3.x/Router/getting-started.html
+++ b/packages/3.x/Router/getting-started.html
@@ -202,7 +202,7 @@ foreach ($route-&gt;attributes as $key =&gt; $val) {
 // (consider using https://github.com/auraphp/Aura.Dispatcher
 // in place of the one callable below.)
 $callable = $route-&gt;handler;
-$response = $callable($request, $response);
+$response = $callable($request);
 
 // emit the response
 foreach ($response-&gt;getHeaders() as $name =&gt; $values) {
@@ -210,6 +210,7 @@ foreach ($response-&gt;getHeaders() as $name =&gt; $values) {
         header(sprintf('%s: %s', $name, $value), false);
     }
 }
+http_response_code($response-&gt;getStatusCode());
 echo $response-&gt;getBody();
 </code></pre>
 <p>Now start the built in PHP server ...</p>
