--- a/packages/3.x/Sql/yield.html
+++ b/packages/3.x/Sql/yield.html
@@ -46,7 +46,7 @@ foreach ($pdo-&gt;yieldCol($stm, $bind) as $val) {
 // class name and optional array of constructor arguments.
 $class = 'ClassName';
 $args = ['arg0', 'arg1', 'arg2'];
-foreach ($pdo-&gt;yieldCol($stm, $bind, $class, $args) as $object) {
+foreach ($pdo-&gt;yieldObjects($stm, $bind, $class, $args) as $object) {
     // ...
 }
 
