--- a/packages/3.x/Di/migrating.html
+++ b/packages/3.x/Di/migrating.html
@@ -9,19 +9,19 @@ permalink: /packages/3.x/Di/migrating.html
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">1.1.10. Migrating from 2.x to 3.x</th>
+            <th colspan="3" class="curr">2.1.10. Migrating from 2.x to 3.x</th>
         </tr>
         <tr>
             <td class="prev"><a href="/packages/3.x/Di/auto.html">Auto-Resolution Of Constructor Parameters</a></td>
-            <td class="parent">1.1. Aura.Di</th>
+            <td class="parent">2.1. Aura.Di</th>
             <td class="next"><a href="/packages/3.x/Intl.html">Aura.Intl</a></td>
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-1-10">1.1.10. Migrating from 2.x to 3.x</h1>
+<div id="section-main"><h1 id="2-1-10">2.1.10. Migrating from 2.x to 3.x</h1>
 <p>Aura.Di 3.x is largely similar to 2.x, but there are some backwards-compatibility breaks, as well as some new features.</p>
-<h2 id="1-1-10-1">1.1.10.1. BC Breaks</h2>
-<h3 id="1-1-10-1-1">1.1.10.1.1. Instantiation</h3>
+<h2 id="2-1-10-1">2.1.10.1. BC Breaks</h2>
+<h3 id="2-1-10-1-1">2.1.10.1.1. Instantiation</h3>
 <p>The way the container is instantiated has been changed from this ...</p>
 <pre><code class="language-php">use Aura\Di\Container;
 use Aura\Di\Factory;
@@ -51,20 +51,21 @@ $di = $container_builder-&gt;newConfiguredInstance([
     'Aura\Web\_Config\Common',
 ]);
 </code></pre>
-<h3 id="1-1-10-1-2">1.1.10.1.2. <code>setter</code> vs <code>setters</code>
+<h3 id="2-1-10-1-2">2.1.10.1.2. 
+<code>setter</code> vs <code>setters</code>
 </h3>
 <p>Use of <code>$di-&gt;setter</code> in 2.x is now <code>$di-&gt;setters</code> in 3.x. Please note there is an additional <a href="https://github.com/auraphp/Aura.Di/issues/115"><code>s</code> in the end</a>.</p>
-<h3 id="1-1-10-1-3">1.1.10.1.3. Automatic Locking</h3>
+<h3 id="2-1-10-1-3">2.1.10.1.3. Automatic Locking</h3>
 <p>The container now calls <code>lock()</code> automatically when you call <code>get()</code> or <code>newInstance()</code>, so make sure everything is lazy-loaded, or else you will run into something like <a href="https://github.com/auraphp/Aura.Di/issues/118">cannot modify container when locked</a>.</p>
-<h3 id="1-1-10-1-4">1.1.10.1.4. Config vs ContainerConfig</h3>
+<h3 id="2-1-10-1-4">2.1.10.1.4. Config vs ContainerConfig</h3>
 <p><a href="https://github.com/auraphp/Aura.Di/blob/2.2.4/src/Config.php"><code>Aura\Di\Config</code></a> in 2.x is now <a href="https://github.com/auraphp/Aura.Di/blob/3.0.0/src/ContainerConfig.php"><code>Aura\Di\ContainerConfig</code></a> in 3.x.</p>
-<h2 id="1-1-10-2">1.1.10.2. Features</h2>
-<h3 id="1-1-10-2-1">1.1.10.2.1. lazyGetCall()</h3>
+<h2 id="2-1-10-2">2.1.10.2. Features</h2>
+<h3 id="2-1-10-2-1">2.1.10.2.1. lazyGetCall()</h3>
 <p>Example taken from <a href="https://github.com/radarphp/Radar.Adr/blob/0b4fa74c4939a715562d60e37c1976fc59b420b6/src/Config.php#L50">Radar</a>:</p>
 <pre><code class="language-php">$di-&gt;params['Radar\Adr\Handler\RoutingHandler']['matcher'] = $di-&gt;lazyGetCall('radar/adr:router', 'getMatcher');
 </code></pre>
 <p>Here the value assigned to <code>matcher</code> is taken from the <a href="https://github.com/auraphp/Aura.Router/blob/3.0.0/src/RouterContainer.php#L263-L273">RouterContainer</a> <code>getMatcher()</code> method.</p>
-<h3 id="1-1-10-2-2">1.1.10.2.2. Instance Factories</h3>
+<h3 id="2-1-10-2-2">2.1.10.2.2. Instance Factories</h3>
 <p>An instance factory creates multiple instances of the same class; <a href="http://auraphp.com/packages/3.x/Di/factories.html">refer the docs</a> for more information.</p>
 </div>
 <nav class="navfooter">
@@ -75,9 +76,9 @@ $di = $container_builder-&gt;newConfiguredInstance([
             <td class="next"><a href="/packages/3.x/Intl.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">1.1.9. Auto-Resolution Of Constructor Parameters</td>
-            <td class="parent">1.1. Aura.Di</td>
-            <td class="next">1.2. Aura.Intl</td>
+            <td class="prev">2.1.9. Auto-Resolution Of Constructor Parameters</td>
+            <td class="parent">2.1. Aura.Di</td>
+            <td class="next">2.2. Aura.Intl</td>
         </tr>
     </table>
 </nav>
