--- a/packages/4.x/Di/factories.html
+++ b/packages/4.x/Di/factories.html
@@ -2,23 +2,23 @@
 layout: site
 active: packages
 title: Instance Factories
-permalink: /packages/3.x/Di/factories.html
+permalink: /packages/4.x/Di/factories.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">2.1.7. Instance Factories</th>
+            <th colspan="3" class="curr">1.1.8. Instance Factories</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Di/lazy.html">Lazy Injection</a></td>
-            <td class="parent">2.1. Aura.Di</th>
-            <td class="next"><a href="/packages/3.x/Di/config.html">Container Builder and Config Classes</a></td>
+            <td class="prev"><a href="/packages/4.x/Di/lazy.html">Lazy Injection</a></td>
+            <td class="parent">1.1. Aura.Di</th>
+            <td class="next"><a href="/packages/4.x/Di/config.html">Container Builder and Config Classes</a></td>
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-1-7">2.1.7. Instance Factories</h1>
+<div id="section-main"><h1 id="1-1-8">1.1.8. Instance Factories</h1>
 <p>Occasionally, a class will need to receive not just an instance, but a factory that is capable of creating a new instance over and over.  For example, say we have a class like the following:</p>
 <pre><code class="language-php">class ExampleNeedsFactory
 {
@@ -51,8 +51,8 @@ class ExampleStruct
 </code></pre>
 <p>Note that the arguments passed to the factory <code>__invoke()</code> method will be passed to the underlying instance constructor sequentially, not by name. This means the <code>__invoke()</code> method works more like the native <code>new</code> keyword, and not like <code>$di-&gt;lazyNew()</code>.  These arguments override any <code>$di-&gt;params</code> values that have been set for the class being factoried; without the overrides, all existing <code>$di-&gt;params</code> values for that class will be honored. (Values from <code>$di-&gt;setter</code> for the class will also be honored, but cannot be overridden.)</p>
 <p>Do not feel limited by the <em>Factory</em> implementation. We can create and inject factory objects of our own if we like. The <em>Factory</em> returned by the <code>$di-&gt;newFactory()</code> method is an occasional convenience, nothing more.</p>
-<h2 id="2-1-7-1">2.1.7.1. Broader Instantiation</h2>
-<p>Sometimes you may want to more broadly leverage a configured containers ability
+<h2 id="1-1-8-1">1.1.8.1. Broader Instantiation</h2>
+<p>Sometimes you may want to more broadly leverage a configured container's ability
 to instantiate objects in your classes, for example in some kind of service
 locator. The <code>ResolutionHelper</code> provides a callable object which takes a
 "specification" as a parameter and will retrieve a service if the container has
@@ -65,7 +65,7 @@ instance.</p>
 $helper = $di-&gt;newResolutionHelper();
 
 $foo = $helper(\My\Foo::class);
-// will return service named "My\Foo" if on is named as such
+// will return service named "My\Foo" if one is named as such
 // or else a new instance of "My\Foo"
 
 $fooBar = $helper([\My\Foo::class, 'bar']);
@@ -77,14 +77,14 @@ callable, rather than the container itself.</p>
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Di/lazy.html">Prev</a></td>
-            <td class="parent"><a href="/packages/3.x/Di/">Up</a></td>
-            <td class="next"><a href="/packages/3.x/Di/config.html">Next</a></td>
+            <td class="prev"><a href="/packages/4.x/Di/lazy.html">Prev</a></td>
+            <td class="parent"><a href="/packages/4.x/Di/">Up</a></td>
+            <td class="next"><a href="/packages/4.x/Di/config.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">2.1.6. Lazy Injection</td>
-            <td class="parent">2.1. Aura.Di</td>
-            <td class="next">2.1.8. Container Builder and Config Classes</td>
+            <td class="prev">1.1.7. Lazy Injection</td>
+            <td class="parent">1.1. Aura.Di</td>
+            <td class="next">1.1.9. Container Builder and Config Classes</td>
         </tr>
     </table>
 </nav>
