--- a/packages/4.x/Di/setter.html
+++ b/packages/4.x/Di/setter.html
@@ -2,23 +2,23 @@
 layout: site
 active: packages
 title: Setter Injection
-permalink: /packages/3.x/Di/setter.html
+permalink: /packages/4.x/Di/setter.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">2.1.3. Setter Injection</th>
+            <th colspan="3" class="curr">1.1.3. Setter Injection</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Di/constructor.html">Constructor Injection</a></td>
-            <td class="parent">2.1. Aura.Di</th>
-            <td class="next"><a href="/packages/3.x/Di/inheritance.html">Class, Interface, and Trait Inheritance</a></td>
+            <td class="prev"><a href="/packages/4.x/Di/constructor.html">Constructor Injection</a></td>
+            <td class="parent">1.1. Aura.Di</th>
+            <td class="next"><a href="/packages/4.x/Di/mutations.html">Mutate object after instantion</a></td>
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="2-1-3">2.1.3. Setter Injection</h1>
+<div id="section-main"><h1 id="1-1-3">1.1.3. Setter Injection</h1>
 <p>The <em>Container</em> supports setter injection in addition to constructor injection. (These can be combined as needed.)</p>
 <p>After the <em>Container</em> constructs a new instance of an object, we can specify that certain methods should be called with certain values immediately after instantiation by using the <code>$di-&gt;setter</code> array before locking it.</p>
 <p>Say we have class like the following:</p>
@@ -37,7 +37,7 @@ class Example
 <p>We can specify that, by default, the <code>setFoo()</code> method should be called with a specific value after construction like so:</p>
 <pre><code class="language-php">$di-&gt;setters['Vendor\Package\Example']['setFoo'] = 'foo_value';
 </code></pre>
-<p>Note also that this works only with explicitly-defined setter methods. Setter methods that exist only via magic <code>__call()</code> will not be honored.</p>
+<p>Note also that this works only with explicitly-defined setter methods. Setter methods that exist only via magic <code>__call()</code> will not be honored. Use <em>mutations</em> if you want to call magic methods.</p>
 <blockquote>
 <p>N.b.: If you try to access <code>$setters</code> after calling <code>newInstance()</code> (or after locking the <em>Container</em> using the <code>lock()</code> method) the <em>Container</em> will throw an exception. This is to prevent modifying the params after objects have been created. Thus, be sure to set up all params for all objects before creating an object.</p>
 </blockquote>
@@ -45,14 +45,14 @@ class Example
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Di/constructor.html">Prev</a></td>
-            <td class="parent"><a href="/packages/3.x/Di/">Up</a></td>
-            <td class="next"><a href="/packages/3.x/Di/inheritance.html">Next</a></td>
+            <td class="prev"><a href="/packages/4.x/Di/constructor.html">Prev</a></td>
+            <td class="parent"><a href="/packages/4.x/Di/">Up</a></td>
+            <td class="next"><a href="/packages/4.x/Di/mutations.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">2.1.2. Constructor Injection</td>
-            <td class="parent">2.1. Aura.Di</td>
-            <td class="next">2.1.4. Class, Interface, and Trait Inheritance</td>
+            <td class="prev">1.1.2. Constructor Injection</td>
+            <td class="parent">1.1. Aura.Di</td>
+            <td class="next">1.1.4. Mutate object after instantion</td>
         </tr>
     </table>
 </nav>
