--- a/packages/5.x/Sql/connection-locator.html
+++ b/packages/5.x/Sql/connection-locator.html
@@ -1,10 +1,30 @@
-<h1>Connection Locator</h1>
+---
+layout: site
+active: packages
+title: Connection Locator
+permalink: /packages/5.x/Sql/connection-locator.html
+---
+<script>hljs.initHighlightingOnLoad();</script>
+
+<nav class="navheader">
+    <table>
+        <tr>
+            <th colspan="3" class="curr">1.1.5. Connection Locator</th>
+        </tr>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/profiling-logging.html">Profiling and Logging</a></td>
+            <td class="parent">1.1. Aura.Sql</th>
+            <td class="next"><a href="/packages/5.x/Sql/upgrade.html">3.x Upgrade Notes</a></td>
+        </tr>
+    </table>
+</nav>
+<div id="section-main"><h1 id="1-1-5">1.1.5. Connection Locator</h1>
 <p>Frequently, high-traffic PHP applications use multiple database servers,
 generally one for writes, and one or more for reads. The <em>ConnectionLocator</em>
 allows you to define multiple <em>ExtendedPdo</em> objects for lazy-loaded read and
 write connections. It will create the connections only when they are when
 called. The creation logic is wrapped in a callable.</p>
-<h2>Runtime Configuration</h2>
+<h2 id="1-1-5-1">1.1.5.1. Runtime Configuration</h2>
 <p>First, create the <em>ConnectionLocator</em>:</p>
 <pre><code class="language-php">use Aura\Sql\ExtendedPdo;
 use Aura\Sql\ConnectionLocator;
@@ -79,7 +99,7 @@ defined, it will return the default connection.</p>
 <pre><code class="language-php">$read = $connections-&gt;getRead();
 $results = $read-&gt;fetchAll('SELECT * FROM table_name LIMIT 10');
 </code></pre>
-<h2>Construction-Time Configuration</h2>
+<h2 id="1-1-5-2">1.1.5.2. Construction-Time Configuration</h2>
 <p>The <em>ConnectionLocator</em> can be configured with all its connections at
 construction time; this is useful with dependency injection mechanisms.</p>
 <pre><code class="language-php">use Aura\Sql\ConnectionLocator;
@@ -133,3 +153,18 @@ $write = array(
 // configure locator at construction time
 $connections = new ConnectionLocator($default, $read, $write);
 </code></pre>
+</div>
+<nav class="navfooter">
+    <table>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/profiling-logging.html">Prev</a></td>
+            <td class="parent"><a href="/packages/5.x/Sql/">Up</a></td>
+            <td class="next"><a href="/packages/5.x/Sql/upgrade.html">Next</a></td>
+        </tr>
+        <tr>
+            <td class="prev">1.1.4. Profiling and Logging</td>
+            <td class="parent">1.1. Aura.Sql</td>
+            <td class="next">1.1.6. 3.x Upgrade Notes</td>
+        </tr>
+    </table>
+</nav>
