--- a/packages/5.x/Sql/fetch.html
+++ b/packages/5.x/Sql/fetch.html
@@ -1,4 +1,24 @@
-<h1>The <code>fetch*()</code> Methods</h1>
+---
+layout: site
+active: packages
+title: The fetch*() Methods
+permalink: /packages/5.x/Sql/fetch.html
+---
+<script>hljs.initHighlightingOnLoad();</script>
+
+<nav class="navheader">
+    <table>
+        <tr>
+            <th colspan="3" class="curr">1.1.2. The fetch*() Methods</th>
+        </tr>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/getting-started.html">Getting Started</a></td>
+            <td class="parent">1.1. Aura.Sql</th>
+            <td class="next"><a href="/packages/5.x/Sql/yield.html">The yield*() Methods</a></td>
+        </tr>
+    </table>
+</nav>
+<div id="section-main"><h1 id="1-1-2">1.1.2. The <code>fetch*()</code> Methods</h1>
 <p><em>ExtendedPdo</em> comes with <code>fetch*()</code> methods to help reduce boilerplate code.
 Instead of issuing <code>prepare()</code>, a series of <code>bindValue()</code> calls, <code>execute()</code>,
 and then <code>fetch*()</code> on a <em>PDOStatement</em>, you can bind values and fetch results
@@ -54,3 +74,18 @@ $result = $pdo-&gt;fetchValue($stm, $bind);
 $stm = "UPDATE test SET incr = incr + 1 WHERE foo = :foo AND bar = :bar";
 $row_count = $pdo-&gt;fetchAffected($stm, $bind);
 </code></pre>
+</div>
+<nav class="navfooter">
+    <table>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/getting-started.html">Prev</a></td>
+            <td class="parent"><a href="/packages/5.x/Sql/">Up</a></td>
+            <td class="next"><a href="/packages/5.x/Sql/yield.html">Next</a></td>
+        </tr>
+        <tr>
+            <td class="prev">1.1.1. Getting Started</td>
+            <td class="parent">1.1. Aura.Sql</td>
+            <td class="next">1.1.3. The yield*() Methods</td>
+        </tr>
+    </table>
+</nav>
