--- a/packages/5.x/Sql/getting-started.html
+++ b/packages/5.x/Sql/getting-started.html
@@ -1,8 +1,28 @@
-<h1>Getting Started</h1>
-<h2>Instantiation</h2>
+---
+layout: site
+active: packages
+title: Getting Started
+permalink: /packages/5.x/Sql/getting-started.html
+---
+<script>hljs.initHighlightingOnLoad();</script>
+
+<nav class="navheader">
+    <table>
+        <tr>
+            <th colspan="3" class="curr">1.1.1. Getting Started</th>
+        </tr>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/">Aura.Sql</a></td>
+            <td class="parent">1.1. Aura.Sql</th>
+            <td class="next"><a href="/packages/5.x/Sql/fetch.html">The fetch*() Methods</a></td>
+        </tr>
+    </table>
+</nav>
+<div id="section-main"><h1 id="1-1-1">1.1.1. Getting Started</h1>
+<h2 id="1-1-1-1">1.1.1.1. Instantiation</h2>
 <p>You can instantiate <em>ExtendedPdo</em> so that it uses lazy connection, or you can
 use <em>DecoratedPdo</em> to decorate an existing <em>PDO</em> instance.</p>
-<h3>Lazy Connection Instance</h3>
+<h3 id="1-1-1-1-1">1.1.1.1.1. Lazy Connection Instance</h3>
 <p>Instantiation is the same as with the native <em>PDO</em> class: pass a data source
 name, username, password, and driver options. There is one additional
 parameter that allows you to pass attributes to be set after the connection is
@@ -42,7 +62,7 @@ $pdo-&gt;disconnect();
 However, calling an <em>ExtendedPdo</em> method that implicitly establishes a
 connection, such as <code>query()</code> or one of the <code>fetch*()</code> methods, will
 automatically re-connect to the database.</p>
-<h3>Decorator Instance</h3>
+<h3 id="1-1-1-1-2">1.1.1.1.2. Decorator Instance</h3>
 <p>The <em>DecoratedPdo</em> class can be used to decorate an existing PDO connection with
 the <em>ExtendedPdo</em> methods. To do so, instantiate <em>DecoratedPdo</em> by passing an
 existing PDO connection:</p>
@@ -61,7 +81,7 @@ connection managed elsewhere in your application.</p>
 connections, since <em>DecoratedPdo</em> did not create the connection itself. You
 will need to manage the decorated <em>PDO</em> instance yourself in that case.</p>
 </blockquote>
-<h2>Array Quoting</h2>
+<h2 id="1-1-1-2">1.1.1.2. Array Quoting</h2>
 <p>The native <em>PDO</em> <code>quote()</code> method will not quote arrays. This makes it
 difficult to bind an array to something like an <code>IN (...)</code> condition in SQL.
 However, <em>ExtendedPdo</em> recognizes arrays and converts them into comma-
@@ -79,7 +99,7 @@ $cond = 'IN (' . $pdo-&gt;quote($array) . ')';
 $pdo = new ExtendedPdo(...);
 $cond = 'IN (' . $pdo-&gt;quote($array) . ')';
 </code></pre>
-<h2>The <code>perform()</code> Method</h2>
+<h2 id="1-1-1-3">1.1.1.3. The <code>perform()</code> Method</h2>
 <p>The <code>ExtendedPdo::perform()</code> method will prepare a query with bound values in a
 single step.  Also, because the native <em>PDO</em> does not deal with bound array
 values, <code>perform()</code> modifies the query string to expand the array-bound
@@ -107,3 +127,18 @@ echo $sth-&gt;queryString;
 </code></pre>
 <p>Finally, note that array quoting works only via the <code>perform()</code> method,
 not on returned <em>PDOStatement</em> instances.</p>
+</div>
+<nav class="navfooter">
+    <table>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/">Prev</a></td>
+            <td class="parent"><a href="/packages/5.x/Sql/">Up</a></td>
+            <td class="next"><a href="/packages/5.x/Sql/fetch.html">Next</a></td>
+        </tr>
+        <tr>
+            <td class="prev">1.1. Aura.Sql</td>
+            <td class="parent">1.1. Aura.Sql</td>
+            <td class="next">1.1.2. The fetch*() Methods</td>
+        </tr>
+    </table>
+</nav>
