--- a/packages/5.x/Sql/profiling-logging.html
+++ b/packages/5.x/Sql/profiling-logging.html
@@ -1,9 +1,29 @@
-<h1>Profiling and Logging</h1>
+---
+layout: site
+active: packages
+title: Profiling and Logging
+permalink: /packages/5.x/Sql/profiling-logging.html
+---
+<script>hljs.initHighlightingOnLoad();</script>
+
+<nav class="navheader">
+    <table>
+        <tr>
+            <th colspan="3" class="curr">1.1.4. Profiling and Logging</th>
+        </tr>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/yield.html">The yield*() Methods</a></td>
+            <td class="parent">1.1. Aura.Sql</th>
+            <td class="next"><a href="/packages/5.x/Sql/connection-locator.html">Connection Locator</a></td>
+        </tr>
+    </table>
+</nav>
+<div id="section-main"><h1 id="1-1-4">1.1.4. Profiling and Logging</h1>
 <p>It is often useful to see what queries have been executed, where they were
 issued from in the codebase, and how long they took to complete. As such,
 <em>ExtendedPdo</em> comes with a profiler that logs to any <a href="(https://packagist.org/providers/psr/log-implementation)">PSR-3 implementation</a>.
 The profiler defaults to a naive memory-based logger for debugging purposes.</p>
-<h2>Using The Profiler</h2>
+<h2 id="1-1-4-1">1.1.4.1. Using The Profiler</h2>
 <p>You can activate and deactivate the profiler using the <code>Profiler::setActive()</code>
 method. (Messages are not logged when the profiler is not active.)</p>
 <p>You can then examine the log messages using the underlying log system;
@@ -20,7 +40,7 @@ $pdo-&gt;getProfiler()-&gt;setActive(true);
 $messages = $pdo-&gt;getProfiler()-&gt;getLogger()-&gt;getMessages();
 print_r($messages);
 </code></pre>
-<h2>Other Logger Implementations</h2>
+<h2 id="1-1-4-2">1.1.4.2. Other Logger Implementations</h2>
 <p>You can set your own profiler and PSR-3 logger implementation using the
 <code>ExtendedPdo::setProfiler()</code> method.</p>
 <pre><code class="language-php">use Aura\Sql\Profiler\Profiler;
@@ -28,7 +48,7 @@ print_r($messages);
 $myLogger = new Psr3LoggerImplementation();
 $pdo-&gt;setProfiler(new Profiler($myLogger));
 </code></pre>
-<h2>Profiler Log Messages</h2>
+<h2 id="1-1-4-3">1.1.4.3. Profiler Log Messages</h2>
 <p>Profiler log messages, by default, will match this format:</p>
 <pre><code>{function} ({duration} seconds): {statement} {backtrace}
 </code></pre>
@@ -63,7 +83,7 @@ profile entry.</p>
 from in the codebase.</p>
 </li>
 </ul>
-<h2>Profiler Log Level</h2>
+<h2 id="1-1-4-4">1.1.4.4. Profiler Log Level</h2>
 <p>By default, all messages are logged at the <code>DEBUG</code> level. You can change the
 logging level with the <code>Profiler::setLogLevel()</code> method:</p>
 <pre><code class="language-php">use Psr\Log\LogLevel;
@@ -71,3 +91,18 @@ logging level with the <code>Profiler::setLogLevel()</code> method:</p>
 $pdo-&gt;getProfiler()-&gt;setLogLevel(LogLevel::INFO);
 </code></pre>
 <p>Likewise, you can get the current log level with <code>Profiler::getLogLevel()</code>.</p>
+</div>
+<nav class="navfooter">
+    <table>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/yield.html">Prev</a></td>
+            <td class="parent"><a href="/packages/5.x/Sql/">Up</a></td>
+            <td class="next"><a href="/packages/5.x/Sql/connection-locator.html">Next</a></td>
+        </tr>
+        <tr>
+            <td class="prev">1.1.3. The yield*() Methods</td>
+            <td class="parent">1.1. Aura.Sql</td>
+            <td class="next">1.1.5. Connection Locator</td>
+        </tr>
+    </table>
+</nav>
