--- a/packages/5.x/Sql/yield.html
+++ b/packages/5.x/Sql/yield.html
@@ -1,4 +1,24 @@
-<h1>The <code>yield*()</code> Methods</h1>
+---
+layout: site
+active: packages
+title: The yield*() Methods
+permalink: /packages/5.x/Sql/yield.html
+---
+<script>hljs.initHighlightingOnLoad();</script>
+
+<nav class="navheader">
+    <table>
+        <tr>
+            <th colspan="3" class="curr">1.1.3. The yield*() Methods</th>
+        </tr>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/fetch.html">The fetch*() Methods</a></td>
+            <td class="parent">1.1. Aura.Sql</th>
+            <td class="next"><a href="/packages/5.x/Sql/profiling-logging.html">Profiling and Logging</a></td>
+        </tr>
+    </table>
+</nav>
+<div id="section-main"><h1 id="1-1-3">1.1.3. The <code>yield*()</code> Methods</h1>
 <p><em>ExtendedPdo</em> comes with <code>yield*()</code> methods to help reduce memory usage. Whereas
 many <code>fetch*()</code> methods collect all the query result rows before returning them
 all at once, the equivalent <code>yield*()</code> methods generate one result row at a
@@ -36,3 +56,18 @@ foreach ($pdo-&gt;yieldPairs($stm, $bind) as $key =&gt; $val) {
     // ...
 }
 </code></pre>
+</div>
+<nav class="navfooter">
+    <table>
+        <tr>
+            <td class="prev"><a href="/packages/5.x/Sql/fetch.html">Prev</a></td>
+            <td class="parent"><a href="/packages/5.x/Sql/">Up</a></td>
+            <td class="next"><a href="/packages/5.x/Sql/profiling-logging.html">Next</a></td>
+        </tr>
+        <tr>
+            <td class="prev">1.1.2. The fetch*() Methods</td>
+            <td class="parent">1.1. Aura.Sql</td>
+            <td class="next">1.1.4. Profiling and Logging</td>
+        </tr>
+    </table>
+</nav>
